<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/colorforbackground">

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView_Text1"
        android:textSize="25sp"
        android:textColor="@color/TextColor_green"
        android:layout_gravity="center"
        android:background="@color/TextColor_purple"/>

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/TextView_Text2"
        android:textColor="@color/TextColor_red"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:background="@drawable/bk_filleted_corner"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tv_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView_Text3"
        android:textColor="@color/TextColor_red"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tv_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView_Text4"
        android:textColor="@color/TextColor_red"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tv_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView_Text5"
        android:textSize="25sp"
        android:textColor="@color/YellowColor"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tv_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView_Text6"
        android:textSize="25sp"
        android:textColor="@color/YellowColor"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tv_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="string/TextView_Text7string/TextView_Text7string/TextView_Text7"
        android:textSize="25sp"
        android:textColor="@color/YellowColor"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:focusable="true"
        android:focusableInTouchMode="true"/>
        <requestFocus/>

</LinearLayout>