<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <Button
        android:id="@+id/bt_1"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/Button1"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textColor="@color/TextColor_red"
        android:background="@drawable/bk_filleted_corner"
        android:layout_centerHorizontal="true"
        android:onClick="showToast"/>

    <Button
        android:id="@+id/bt_2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/Button2"
        android:textAllCaps="false"
        android:layout_marginTop="15dp"
        android:textColor="@color/TextColor_red"
        android:textSize="25sp"
        android:layout_below="@id/bt_1"
        android:background="@drawable/bk_filleted_corner"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/bt_3"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/Button3"
        android:textSize="25sp"
        android:textColor="@color/TextColor_green"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/bt_2"
        android:background="@drawable/bk_filleted_corner"
        android:layout_marginTop="15dp"/>

</RelativeLayout>