<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/picture2">

    <ImageView
        android:id="@+id/imv_account"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/account"
        android:scaleType="centerCrop"/>

    <EditText
        android:id="@+id/Edt_account"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/AccountHint"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="25sp"
        android:textColor="@color/TextColor_red"
        android:maxLines="1"
        android:inputType="number"
        android:background="@drawable/rounded_box"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_toRightOf="@id/imv_account"
        />

    <ImageView
        android:id="@+id/imv_password"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/password"
        android:layout_below="@id/imv_account"
        android:scaleType="centerCrop"/>
    
    <EditText
        android:id="@+id/Edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/PasswordHint"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/TextColor_red"
        android:maxLines="1"
        android:background="@drawable/rounded_box"
        android:layout_toRightOf="@id/imv_password"
        android:layout_below="@id/Edt_account"
        android:textSize="25sp"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        />

    <Button
        android:id="@+id/EdtButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_below="@id/Edt_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/bk_filleted_corner"
        android:text="@string/btnButton"
        android:textAllCaps="false"/>
    
</RelativeLayout>